<resources>
    <string name="app_name">BeeMooVee</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>

    <string name="onprogress">On Progress</string>

    <string name="movies">Movies</string>
    <string name="tv_series">TV Series</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="introduction">Introduction</string>
</resources>